--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,11 +1,12 @@
 # Development Environment Configuration
-REACT_APP_FIREBASE_API_KEY=AIzaSyBxIdOtPIZdvXjZPTY7gSL7dQeG6yJSPjc
-REACT_APP_FIREBASE_AUTH_DOMAIN=kimwebsite-cd33a.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=kimwebsite-cd33a
-REACT_APP_FIREBASE_STORAGE_BUCKET=kimwebsite-cd33a.firebasestorage.app
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=644454554071
-REACT_APP_FIREBASE_APP_ID=1:644454554071:web:7e9751b1ddea843dd95392
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-QWJY0T2PWZ
+# Replace with your actual development Firebase credentials
+REACT_APP_FIREBASE_API_KEY=your_dev_api_key
+REACT_APP_FIREBASE_AUTH_DOMAIN=your_dev_project.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=your_dev_project_id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your_dev_project.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_dev_sender_id
+REACT_APP_FIREBASE_APP_ID=your_dev_app_id
+REACT_APP_FIREBASE_MEASUREMENT_ID=your_dev_measurement_id
 
 REACT_APP_API_URL=http://localhost:8082/api
 REACT_APP_ENVIRONMENT=development
